fixed alignment issue

--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@ nav {
 }
 nav details summary {
   margin-bottom: 30px;
+  width: 150px;
 }
 nav .site-nav section {
   line-height: 22px;
